--- a/index.html
+++ b/index.html
@@ -1,143 +1,68 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8" />
-    <title>Простейший рогалик</title>
-    <style>
-        body { font-family: sans-serif; text-align: center; background:#111; color:#eee; }
-        #log { white-space: pre-line; margin-top:20px; min-height: 200px; }
-        #eventLog { white-space: pre-line; margin-top:10px; background:#222; padding:10px; display:none; }
-        button { font-size: 20px; padding: 10px 20px; }
-        canvas { image-rendering: pixelated; width:128px; height:128px; border:1px solid #555; background:#222; margin-top:20px; }
-    </style>
+<meta charset="UTF-8" />
+<title>Простейший рогалик</title>
+<style>
+body { font-family:sans-serif; background:#111; color:#eee; text-align:center; }
+.screen { display:none; }
+canvas { image-rendering:pixelated; width:128px; height:128px; border:1px solid #555; background:#222; margin:10px auto; }
+#log, #eventLog { white-space:pre-line; margin-top:10px; }
+.popup { position:fixed; top:20%; left:50%; transform:translateX(-50%); background:#222; padding:10px; border:1px solid #555; display:none; }
+.inventory-slot { width:32px; height:32px; border:1px solid #555; display:inline-block; margin:2px; }
+</style>
 </head>
 <body>
-    <button id="startBtn">Отправить в подземелье</button>
-    <div id="stats"></div>
-    <div id="log"></div>
-    <div id="eventLog"></div>
-    <canvas id="game" width="32" height="32"></canvas>
-    <script>
-    function rand(min,max){ return Math.floor(Math.random()*(max-min+1))+min; }
-    const startBtn = document.getElementById('startBtn');
-    const logEl = document.getElementById('log');
-    const statsEl = document.getElementById('stats');
-    const eventLogEl = document.getElementById('eventLog');
-    const canvas = document.getElementById('game');
-    const ctx = canvas.getContext('2d');
+<div id="greeting" class="screen">
+  <h1>Добро пожаловать!</h1>
+  <button id="greetBtn">Продолжить</button>
+</div>
 
-    function genSprite(color){
-        const s=16;
-        const c=document.createElement('canvas');
-        c.width=c.height=s;
-        const x=c.getContext('2d');
-        x.fillStyle='#000';
-        x.fillRect(0,0,s,s);
-        x.fillStyle=color;
-        for(let i=0;i<s;i++){
-            for(let j=0;j<s/2;j++){
-                if(Math.random()>0.5){
-                    x.fillRect(j,i,1,1);
-                    x.fillRect(s-1-j,i,1,1);
-                }
-            }
-        }
-        return c;
-    }
+<div id="creation" class="screen">
+  <canvas id="creationCanvas" width="32" height="32"></canvas>
+  <div id="alloc"></div>
+  <p>Свободных очков: <span id="points">4</span></p>
+  <input id="nameInput" placeholder="Имя" />
+  <button id="createBtn">Создать</button>
+</div>
 
-    const heroSprite = genSprite('#ff0');
-    const monsterSprite = genSprite('#f00');
-    const chestSprite = genSprite('#fc3');
-    const potionSprite = genSprite('#0f0');
+<div id="room" class="screen">
+  <canvas id="heroCanvas" width="32" height="32"></canvas>
+  <div id="roomStats"></div>
+  <button id="dungeonBtn">Отправиться в подземелье</button>
+  <div>
+    <button id="inventoryBtn">Инвентарь</button>
+    <button id="statsBtn">Статистика</button>
+    <button id="charBtn">Окно персонажа</button>
+  </div>
+</div>
 
-    function drawSprite(spr){ ctx.drawImage(spr,8,8); }
+<div id="dungeon" class="screen">
+  <div id="log"></div>
+  <div id="eventLog"></div>
+</div>
 
-    function updateStats(h){
-        statsEl.textContent = `HP: ${h.hp} | Монеты: ${h.coins} | Инвентарь: ${h.items.join(', ')||'пусто'}`;
-    }
+<div id="death" class="screen">
+  <h2>Персонаж погиб</h2>
+  <button id="restartBtn">Начать заново</button>
+</div>
 
-    function startEvent(){
-        eventLogEl.style.display='block';
-        eventLogEl.textContent='';
-    }
+<div id="inventoryPopup" class="popup">
+  <h3>Инвентарь</h3>
+  <div id="inventorySlots"></div>
+  <button class="close">X</button>
+</div>
+<div id="statsPopup" class="popup">
+  <h3>Статистика</h3>
+  <div id="statsText"></div>
+  <button class="close">X</button>
+</div>
+<div id="charPopup" class="popup">
+  <h3>Персонаж</h3>
+  <div id="charText"></div>
+  <button class="close">X</button>
+</div>
 
-    function endEvent(){
-        eventLogEl.style.display='none';
-    }
-
-    async function run(){
-        startBtn.disabled = true;
-        ctx.clearRect(0,0,32,32);
-        drawSprite(heroSprite);
-        let hero = { hp:100, atk: rand(1,10), coins:0, items:[] };
-        logEl.textContent = `Герой отправился в подземелье\nСила ${hero.atk}, HP ${hero.hp}`;
-        updateStats(hero);
-        const loot=['Амулет','Меч','Кольцо','Свиток','Щит'];
-        let events=0;
-        while(hero.hp>0 && events<100){
-            events++;
-            await new Promise(r=>setTimeout(r,500));
-            ctx.clearRect(0,0,32,32);
-            const roll = Math.random();
-            if(roll<0.5){
-                const monster={hp:rand(20,100), atk:rand(1,10)};
-                drawSprite(monsterSprite);
-                logEl.textContent += `\nМонстр (Сила ${monster.atk}, HP ${monster.hp})`;
-                startEvent();
-                eventLogEl.textContent += `Началась схватка!\n`;
-                while(hero.hp>0 && monster.hp>0){
-                    monster.hp -= hero.atk;
-                    eventLogEl.textContent += `Герой ударил монстра на ${hero.atk} (HP монстра ${Math.max(0,monster.hp)})\n`;
-                    if(monster.hp<=0) break;
-                    hero.hp -= monster.atk;
-                    hero.hp = Math.max(0, hero.hp);
-                    eventLogEl.textContent += `Монстр ударил героя на ${monster.atk} (HP героя ${hero.hp})\n`;
-                    updateStats(hero);
-                    await new Promise(r=>setTimeout(r,300));
-                }
-                if(hero.hp<=0){
-                    updateStats(hero);
-                    eventLogEl.textContent += `Герой погиб`;
-                    logEl.textContent += `\nГерой погиб`;
-                    endEvent();
-                    break;
-                }
-                const reward = rand(5,20);
-                hero.coins += reward;
-                eventLogEl.textContent += `Монстр повержен. Получено ${reward} монет\n`;
-                logEl.textContent += `\nМонстр повержен. Получено ${reward} монет (HP ${hero.hp})`;
-                endEvent();
-            } else if(roll<0.7){
-                drawSprite(chestSprite);
-                logEl.textContent += `\nСундук`;
-                startEvent();
-                eventLogEl.textContent += `Герой открывает сундук...\n`;
-                const reward = rand(10,30);
-                const item = loot[rand(0,loot.length-1)];
-                hero.coins += reward;
-                hero.items.push(item);
-                eventLogEl.textContent += `Внутри ${reward} монет и ${item}\n`;
-                logEl.textContent += `: ${reward} монет и ${item}`;
-                endEvent();
-            } else {
-                drawSprite(potionSprite);
-                logEl.textContent += `\nЗелье`;
-                startEvent();
-                const heal = rand(10,30);
-                hero.hp = Math.min(100, hero.hp + heal);
-                eventLogEl.textContent += `Герой выпивает зелье и восстанавливает ${heal} HP\n`;
-                logEl.textContent += `: +${heal} HP (теперь ${hero.hp})`;
-                endEvent();
-            }
-            updateStats(hero);
-        }
-        ctx.clearRect(0,0,32,32);
-        drawSprite(heroSprite);
-        logEl.textContent += `\nЗабег окончен. Монет: ${hero.coins}`;
-        startBtn.disabled = false;
-    }
-
-    startBtn.addEventListener('click', run);
-    </script>
+<script type="module" src="main.js"></script>
 </body>
 </html>
